# todo-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: windows-build-guide.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AutoGrowTextarea.tsx  ConfirmDialog.tsx  Section.tsx  TabBar.tsx  TabContent.tsx  TaskItem.tsx  ThemeToggle.tsx
src/db/: database.ts
src/hooks/: useTheme.ts
src/store/: todoStore.ts
