[package]
name = "todo-app"
version = "0.1.0"
description = "A Tauri todo app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "todo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
